--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ a:hover{cursor:pointer}
 .modal p{line-height:1.4em;margin:10px}
 .modal i{display:block;margin-bottom:10px}
 .modal a{color:#000;text-decoration:underline}
-#donate form{display:inline;margin:0}
+#paypal{background:none;border:none;padding:0;font:inherit;cursor:pointer;text-decoration:underline}
 .md-close{display:block;width:100%;padding:15px 10px;margin:20px -10px -10px -10px;text-align:center;border-top:solid 1px #D6D6D6;color:#757575!important}
 
 #footer{position:fixed;bottom:0;left:0;width:100%;background-color:rgba(25,25,25,0.9);font-size:13px;height:40px}
