--- a/css/main.css
+++ b/css/main.css
@@ -64,10 +64,11 @@ a:hover{cursor:pointer}
 #loading{width:100%;padding:15px 0;background-color:rgba(25,25,25,0.9);color:#fff}
 
 .modal{background-color:#fff;text-align:left;padding:10px;border-top:solid 1px #D6D6D6}
-.modal p{line-height:1.4em;margin:10px}
+.modal p{line-height:1.5em;margin:10px}
 .modal i{display:block;margin-bottom:10px}
 .modal a{color:#000;text-decoration:underline}
 #paypal{background:none;border:none;padding:0;font:inherit;cursor:pointer;text-decoration:underline}
+#coinbase{color:#2B71B1}
 .md-close{display:block;width:100%;padding:15px 10px;margin:20px -10px -10px -10px;text-align:center;border-top:solid 1px #D6D6D6;color:#757575!important}
 
 #footer{position:fixed;bottom:0;left:0;width:100%;background-color:rgba(25,25,25,0.9);font-size:13px;height:40px}
