cleaner & more seamless downloads / bug fixes

--- a/app/scss/media-header.scss
+++ b/app/scss/media-header.scss
@@ -1,7 +1,7 @@
 .media-header {
   width: 100%;
   padding: 10px;
-  border-bottom: solid 1px #eee;
+  border-bottom: solid 1px #f0f0f0;
   font-size: 0.8rem;
   white-space: nowrap;
   overflow: hidden;
