--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,7 +1,3 @@
-// boxes
-
-$header-height: 38px;
-
 // colors
 
 $white: #fff;
@@ -17,4 +13,4 @@ $black: #000;
 $color-eighttracks: #2f364a;
 $color-soundcloud: #f50;
 $color-cat: #bf00fe;
-$color-invalid: #d12f3e;
+$color-error: #d12f3e;
